grammar.js
        root: $ => repeat($.container_members),

        /*
         * ContainerMembers <- ContainerDeclarations (ContainerField COMMA)* (ContainerField / ContainerDeclarations)
         */
        test_declaration: $ => seq(
            'test',
            $.string_literal_singleline,
            $.block,
        ),

        /*
         * TopLevelComptime <- doc_comment? KEYWORD_comptime BlockExpr
         */
        variable_declaration: $ => seq(
            choice(
                'const',
                'var',
            ),
            $.identifier,
            optional(seq(
                ':',
                // TODO: rename into type expression
                $.basic_type,
            )),
            optional($.byte_align),
            optional($.link_section),
            optional(seq(
                '=',
                $._expression,
            )),
            ';',
        ),

        /*
         * ContainerField <- doc_comment? KEYWORD_comptime? IDENTIFIER (COLON (KEYWORD_anytype / TypeExpr) ByteAlign?)? (EQUAL Expr)?
         */
        statement: $ => prec(PREC.STATEMENT, choice(
            seq(
                optional('comptime'),
                $.variable_declaration,
            ),
            // $.if_statement,
            // $.labeled_statement,
            // $.switch_expression,
            seq(
                $._expression,
                ';',
            ),
        )),
        // if_statement: $ => seq(
        // labeled_statement: $ => seq(
        // loop_statement: $ => seq(
        // for_statement: $ => seq(
        // while_statement: $ => seq(
        // block_expression_statement: $ => seq(

        /*
         * BlockExpr <- BlockLabel? Block
         */
        block_expression: $ => seq(
            optional($.block_label),
            $.block,
        ),

        _expression: $ => choice(
            $.primary_expression,
            $.function_call_expression,
            $.assignment_expression,
            $.boolean_or_expression,
            $.boolean_and_expression,
            $.comparison_expression,
            $.bitwise_expression,
            $.bit_shift_expression,
            $.addition_expression,
            $.multiplication_expression,
            $.prefix_expression,
            $.suffix_expression,
        ),

        /*
         * AssignExpr <- Expr (AssignOp Expr)?
         */
        assignment_expression: $ => prec.right(PREC.ASSIGNMENT_EXPRESSION, seq(
            $._expression,
            $.assignment_operator,
            $._expression,
        )),

        /*
         * BoolOrExpr <- BoolAndExpr (KEYWORD_or BoolAndExpr)*
         */
        boolean_or_expression: $ => prec.left(PREC.BOOLEAN_OR_EXPRESSION, seq(
            $._expression,
            'or',
            $._expression,
        )),

        /*
         * BoolAndExpr <- CompareExpr (KEYWORD_and CompareExpr)*
         */
        boolean_and_expression: $ => prec.left(PREC.BOOLEAN_AND_EXPRESSION, seq(
            $._expression,
            'and',
            $._expression,
        )),

        /*
         * CompareExpr <- BitwiseExpr (CompareOp BitwiseExpr)?
         */
        comparison_expression: $ => prec.right(PREC.COMPARISON_EXPRESSION, seq(
            $._expression,
            $.comparison_operator,
            $._expression,
        )),

        /*
         * BitwiseExpr <- BitShiftExpr (BitwiseOp BitShiftExpr)*
         */
        bitwise_expression: $ => prec.left(PREC.BITWISE_EXPRESSION, seq(
            $._expression,
            $.bitwise_operator,
            $._expression,
        )),

        /*
         * BitShiftExpr <- AdditionExpr (BitShiftOp AdditionExpr)*
         */
        bit_shift_expression: $ => prec.left(PREC.BIT_SHIFT_EXPRESSION, seq(
            $._expression,
            $.bit_shift_operator,
            $._expression,
        )),

        /*
         * AdditionExpr <- MultiplyExpr (AdditionOp MultiplyExpr)*
         */
        addition_expression: $ => prec.left(PREC.ADDITION_EXPRESSION, seq(
            $._expression,
            $.addition_operator,
            $._expression,
        )),

        /*
         * MultiplyExpr <- PrefixExpr (MultiplyOp PrefixExpr)*
         */
        multiplication_expression: $ => prec.left(PREC.MULTIPLICATION_EXPRESSION, seq(
            $._expression,
            $.multiplication_operator,
            $._expression,
        )),
        
        /*
         * PrefixExpr <- PrefixOp* PrimaryExpr
         */
        prefix_expression: $ => prec.right(PREC.PREFIX_EXPRESSION, seq(
            $.prefix_operator,
            $._expression,
        )),

        /*
         * SuffixExpr
         *     <- KEYWORD_async PrimaryTypeExpr SuffixOp* FnCallArguments
         *      / PrimaryTypeExpr (SuffixOp / FnCallArguments)*
         */
        suffix_expression: $ => prec.left(PREC.SUFFIX_EXPRESSION, seq(
            $._expression,
            $.suffix_operator,
        )),

        /*
         * SuffixExpr
         *     <- KEYWORD_async PrimaryTypeExpr SuffixOp* FnCallArguments
         *      / PrimaryTypeExpr (SuffixOp / FnCallArguments)*
         */
        function_call_expression: $ => prec.left(PREC.SUFFIX_EXPRESSION, seq(
            $._expression,
            $.function_call_arguments,
        )),

        /*
         * Block <- LBRACE Statement* RBRACE
         */
        block: $ => seq(
            '{',
                repeat($.statement),
            '}',
        ),

        /*
         * InitList
         *     <- LBRACE FieldInit (COMMA FieldInit)* COMMA? RBRACE
         *      / LBRACE Expr (COMMA Expr)* COMMA? RBRACE
         *      / LBRACE RBRACE
         */
        break_label: $ => seq(
            ':',
            $.identifier,
        ),

        /*
         * BlockLabel <- IDENTIFIER COLON
         */
        block_label: $ => seq(
            $.identifier,
            ':',
        ),

        /*
         * FieldInit <- DOT IDENTIFIER EQUAL Expr
         */
        while_continue_expression: $ => seq(
            ':',
            '(',
            // TODO: change to assignment_expression (or not - needs confirmation)
            $._expression,
            ')',
        ),

        /*
         * LinkSection <- KEYWORD_linksection LPAREN Expr RPAREN
         */
        if_prefix: $ => seq(
            'if',
            '(',
            $._expression,
            ')',
            optional($.pointer_payload),
        ),

        /*
         * WhilePrefix <- KEYWORD_while LPAREN Expr RPAREN PtrPayload? WhileContinueExpr?
         */
        while_prefix: $ => seq(
            'while',
            '(',
            $._expression,
            ')',
            optional($.pointer_payload),
            optional($.while_continue_expression),
        ),

        /*
         * ForPrefix <- KEYWORD_for LPAREN Expr RPAREN PtrIndexPayload
         */
        for_prefix: $ => seq(
            'for',
            '(',
            $._expression,
            ')',
            $.pointer_index_payload,
        ),

        /*
         * Payload <- PIPE IDENTIFIER PIPE
         */
        payload: $ => seq(
            '|',
            $.identifier,
            '|',
        ),

        /*
         * PtrPayload <- PIPE ASTERISK? IDENTIFIER PIPE
         */
        pointer_index_payload: $ => seq(
            '|',
            optional('*'),
            $.identifier,
            optional(seq(
                ',',
                $.identifier,
            )),
            '|',
        ),

        /*
         * SwitchProng <- SwitchCase EQUALRARROW PtrPayload? AssignExpr
         */
        switch_prong: $ => seq(
            $.switch_case,
            '=>',
            optional($.pointer_payload),
            $._expression,
        ),

        /*
         *
         * SwitchCase
         *     <- SwitchItem (COMMA SwitchItem)* COMMA?
         *      / KEYWORD_else
         */
        switch_case: $ => choice(
            commaSeparatedDangle($.switch_item),
            'else',
        ),

        /*
         * SwitchItem <- Expr (DOT3 Expr)?
         */
        switch_item: $ => seq(
            $._expression,
            optional(seq(
                '...',
                $._expression,
            )),
        ),

        /*
         * AssignOp
         *     <- ASTERISKEQUAL
         *      / SLASHEQUAL
         *      / PERCENTEQUAL
         *      / PLUSEQUAL
         *      / MINUSEQUAL
         *      / LARROW2EQUAL
         *      / RARROW2EQUAL
         *      / AMPERSANDEQUAL
         *      / CARETEQUAL
         *      / PIPEEQUAL
         *      / ASTERISKPERCENTEQUAL
         *      / PLUSPERCENTEQUAL
         *      / MINUSPERCENTEQUAL
         *      / EQUAL
         */
        function_call_arguments: $ => seq(
            '(',
            optional($.expression_list),
            ')',
        ),

        /*
         * SliceTypeStart <- LBRACKET (COLON Expr)? RBRACKET
         */
        basic_type: $ => choice(
            ...BASIC_TYPES,
        ),

        undefined_literal: $ => 'undefined',

        null_literal: $ => 'null',

        boolean_literal: $ => choice('true', 'false'),

        /*
         * char_char
         *     <- mb_utf8_literal
         *      / char_escape
         *      / ascii_char_not_nl_slash_squote
         *
         * CHAR_LITERAL <- "'" char_char "'" skip
         */
        character_literal: $ => seq(
            '\'',
            choice(
                $.mb_utf8_literal,
                $.character_escape,
                /[^\n\\']/,
            ),
            '\''
        ),

        /*
         * char_escape
         *     <- "\\x" hex hex
         *      / "\\u{" hex+ "}"
         *      / "\\" [nr\\t'"]
         */
        character_escape: $ => choice(
            /\\x[A-Fa-f0-9]{2}/,
            /\\u{[A-Fa-f0-9]+}/,
            /\\[nr\\t'"]/,
        ),

        /*
         * mb_utf8_literal <-
         *        oxF4      ox80_ox8F ox80_oxBF ox80_oxBF
         *      / oxF1_oxF3 ox80_oxBF ox80_oxBF ox80_oxBF
         *      / oxF0      ox90_0xBF ox80_oxBF ox80_oxBF
         *      / oxEE_oxEF ox80_oxBF ox80_oxBF
         *      / oxED      ox80_ox9F ox80_oxBF
         *      / oxE1_oxEC ox80_oxBF ox80_oxBF
         *      / oxE0      oxA0_oxBF ox80_oxBF
         *      / oxC2_oxDF ox80_oxBF
         *
         * https://lemire.me/blog/2018/05/09/how-quickly-can-you-check-that-a-string-is-valid-unicode-utf-8/
         */
        string_literal: $ => choice(
            $.string_literal_multiline,
            $.string_literal_singleline,
        ),

        /*
         * FLOAT
         *     <- "0x" hex_int "." hex_int ([pP] [-+]? dec_int)? skip
         *      /      dec_int "." dec_int ([eE] [-+]? dec_int)? skip
         *      / "0x" hex_int [pP] [-+]? dec_int skip
         *      /      dec_int [eE] [-+]? dec_int skip
         */
        float_literal: $ => choice(
            /0x[A-Fa-f0-9]+(_?[A-Fa-f0-9]+)*\.[A-Fa-f0-9]+(_?[A-Fa-f0-9]+)*([pP][-+]?([0-9]+(_?[0-9]+)*))?/,
            /[0-9]+(_?[0-9]+)*\.[0-9]+(_?[0-9]+)*([pP][-+]?([0-9]+(_?[0-9]+)*))?/,
            /0x[A-Fa-f0-9](_?[A-Fa-f0-9])*[pP][-+]?[0-9](_?[0-9]+)*/,
            /[0-9]+(_?[0-9]+)*[pP][-+]?[0-9](_?[0-9]+)*/,
        ),

        /*
         * INTEGER
         *     <- "0b" bin_int skip
         *      / "0o" oct_int skip
         *      / "0x" hex_int skip
         *      /      dec_int   skip
         */
        integer_literal: $ => choice(
            /0b[01]+(_?[01]+)*/,
            /0o[0-7]+(_?[0-7]+)*/,
            /[0-9]+(_?[0-9]+)*/,
            /0x[A-Fa-f0-9]+(_?[A-Fa-f0-9]+)*/,
        ),

        /*
         * IDENTIFIER
         *    <- !keyword [A-Za-z_] [A-Za-z0-9_]* skip
         *     / "@\"" string_char* "\""                            skip
         */
        identifier: $ => /[A-Za-z_][A-Za-z0-9_]*/,

        /*
         * BUILTINIDENTIFIER <- "@"[A-Za-z_][A-Za-z0-9_]* skip
         */
